--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,9 @@
         </activity>
         <activity android:name=".FlavorActivity" />
         <activity android:name=".NameActivity" />
-        <activity android:name=".FortuneActivity"></activity>
-        <activity android:name=".CookieActivity"></activity>
+        <activity android:name=".FortuneActivity" />
+        <activity android:name=".CookieActivity" />
+        <activity android:name=".AboutActvity"></activity>
     </application>
 
 </manifest>
